--- a/styles.css
+++ b/styles.css
@@ -149,4 +149,15 @@ canvas {
     z-index: 999;
     border-radius: 0;
   }
+
+  @media screen and (max-width: 768px) {
+  .control-panel {
+    height: calc(var(--vh, 1vh) * 100);
+    min-height: calc(var(--vh, 1vh) * 100);
+  }
+  
+  #videoContainer {
+    height: calc(var(--vh, 1vh) * 100);
+  }
+}
 }
